# learnOpengl

./: .gitignore  CMakeLists.txt  learnOpengl.sln  learnOpengl.vcxproj  learnOpengl.vcxproj.filters  main.cpp  tiny_obj_loader.cc
backup/: mainback.cpp
include/: bone.cpp  bone.h  mesh.h  modeltiny.h  tiny_obj_loader.h
proj1234/: 6.3.coordinate_systems.fs  CMakeLists.txt  glad.c  main.cpp
proj1234/include/: CameraM.h  ccd.cpp  model.h
proj1234/include/glad/: glad.h
proj1234/shader/: 3.2.2.point_shadows.fs
proj5/: CMakeLists.txt  main.cpp
proj51/: CMakeLists.txt  main.cpp
proj51/include/: Makefile  Makefile.dep  OBJFileReader.cpp  SolidDelegate.cpp
